FIX - IE flex box bug , was stretching image.

--- a/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
+++ b/src/assets/toolkit/styles/6-components/_components.promo-panel.scss
@@ -556,6 +556,7 @@ $promo-max-width:   60em;
                 img {
                     // position: absolute;
                     // bottom: 5%;
+                    flex-shrink: 0;
                     padding-left: 1em;
                 }
 
